# Sisyphus

./: CMakeLists.txt  LICENSE  README.md
Documentation/: Contributing.md  Documentation.md  Release.md  Tools.md
Documentation/Getting started/: Getting started.md  Initialising the engine.md
LICENSES/: LICENSES_GLM.txt  LICENSES_VULKAN.txt  LICENSE_STB_IMAGE.txt  LICENSE_WAYLAND_PROTOCOLS.txt
Sisyphuspp/: CMakeLists.txt  README.md
Sisyphuspp/include/: Sisyphus.hpp  camera.hpp  config.hpp  engine.hpp  export.hpp  object.hpp  renderer.hpp  texture.hpp  utils.hpp  window.hpp
Sisyphuspp/src/: camera.cpp  config.cpp  engine.cpp  object.cpp  renderer.cpp  texture.cpp  utils.cpp  window.cpp
cmake/: DetectWayland.cmake  ForceUninstall.cmake  SisyphusConfig.cmake.in  Uninstall.cmake.in  sisyphus_config.h.in
include/: camera.h  config.h  engine.h  errors.h  export.h  object.h  renderer.h  shaders.h  sisyphus.h  sisyphus_engine.h  sisyphus_renderer.h  sisyphus_window.h  texture.h  utils.h  window.h
include/Sisyphus/: camera.h  engine.h  export.h  input_manager.h  object.h  sisyphus.h  texture.h  utils.h  window.h
include/Sisyphus/data_structures/: dynamic_array.h  indexed_linked_list.h
include/Sisyphus/surfaces/: wayland.h
include/Sisyphus/vulkan_context/: buffer.h  command_buffer.h  debug.h  device.h  ext_func.h  graphic.h  instance.h  surface.h  swapchain.h  sync_object.h  utils.h  vulkan_context.h
include/surfaces/: surfaces.h  wayland.h
include/vulkan_context/: buffer.h  command_buffer.h  debug.h  device.h  ext_func.h  graphic.h  instance.h  logical_device.h  physical_device.h  queue.h  surface.h  swapchain.h  sync_object.h  texture.h  utils.h  vulkan_context.h
lib/: README.md
lib/Documentation/: DoxygenConfig
lib/Sisyphuspp/: CMakeLists.txt
lib/Sisyphuspp/include/: engine.hpp  renderer.hpp  utils.hpp
lib/Sisyphuspp/src/: config.cpp  engine.cpp  utils.cpp
lib/cmake/: sisyphus_config.h.in
lib/include/: camera.h  sisyphus.h  utils.h  window.h
lib/include/surfaces/: surfaces.h
lib/src/: engine.c  errors.c  object.c
shaders/: compile.sh  shaders.slang  shaders.spv
src/: camera.c  engine.c  errors.c  input_manager.c  object.c  renderer.c  sisyphus.c  sisyphus_engine.c  sisyphus_renderer.c  sisyphus_window.c  texture.c  utils.c  window.c
src/data_structures/: dynamic_array.c  indexed_linked_list.c
src/surfaces/: wayland.c
src/vulkan_context/: buffer.c  command_buffer.c  debug.c  device.c  ext_func.c  graphic.c  instance.c  logical_device.c  physical_device.c  queue.c  surface.c  swapchain.c  sync_object.c  texture.c  utils.c  vulkan_context.c
